[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="UsernameText" type="LineEdit" parent="."]
margin_left = 366.0
margin_top = 63.0
margin_right = 601.0
margin_bottom = 129.0
text = "Usuario"
align = 1

[node name="PasswordText" type="LineEdit" parent="."]
margin_left = 366.0
margin_top = 147.0
margin_right = 601.0
margin_bottom = 213.0
text = "Contraseña"
align = 1
secret = true

[node name="LoginBtn" type="Button" parent="."]
margin_left = 371.0
margin_top = 344.0
margin_right = 588.0
margin_bottom = 417.0
text = "Iniciar Sesión"

[node name="Login" type="HTTPRequest" parent="."]

[connection signal="focus_entered" from="UsernameText" to="." method="_on_UsernameText_focus_entered"]
[connection signal="focus_entered" from="PasswordText" to="." method="_on_PasswordText_focus_entered"]
[connection signal="pressed" from="LoginBtn" to="." method="_on_LoginBtn_pressed"]
[connection signal="request_completed" from="Login" to="." method="_on_Login_request_completed"]
